--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -19,5 +19,12 @@ spring:
     console:
       path: /h2-console
       enabled: true
+
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
+      location: C:\\Study\\fastcampus\\10 domain\part9\loan\filetest
+
 logging.level:
   org.hibernate.SQL: debug
