--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'org.springframework.boot' version '3.3.3'
+    id 'com.google.cloud.tools.jib' version '3.4.0'
     id 'io.spring.dependency-management' version '1.1.6'
 }
 
@@ -10,6 +11,27 @@ version = '0.0.1-SNAPSHOT'
 java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(17)
+    }
+}
+
+jib {
+    from {
+        image = 'openjdk:17'
+    }
+
+    to {
+        image = 'loan'
+        tags = ['0.0.1']
+    }
+
+    container {
+        mainClass = 'org.example.loan.LoanApplication'
+        creationTime = 'USE_CURRENT_TIMESTAMP'
+        format = 'OCI'
+        volumes = ['/var/tmp']
+        entrypoint = ['java'
+                      , '-cp', '/app/resources:/app/classes:/app/libs/*'
+                      , 'org.example.loan.LoanApplication']
     }
 }
 
